[metadata]
name = lcss
version = 0.1
author = Sergei Minaev
author_email = i@zenux.ru
description = Light CSS pre-processor with nesting, bundling and mixins.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SergeiMinaev/ws_watcher
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = lcss
python_requires = >=3.8

